[POMs] Clean pom.xml
* fix maven plugins management and haromise version
* rename groupdId to ch.albasim.wegas (#1349)